4回目のコミット 5桁までの整数のみ対応 エラーダイアログ追加 グローバル定数追加(Globalsクラス)

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -14,12 +14,13 @@
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="answer" />
+        android:text="@string/answer" />
 
     <Button
         android:id="@+id/textback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textans"
-        android:text="back" />
+
+        android:text="@string/back" />
 </RelativeLayout>
